Fix up spacing of message at the bottom of simple screens

--- a/source/Glimpse.Site/Content/_v1/screen.less
+++ b/source/Glimpse.Site/Content/_v1/screen.less
@@ -180,6 +180,12 @@ footer, .footer {
 	}
 }
 
+.simple {
+	.stats-support {
+		margin-top: 40px;
+	}
+}
+
 .layout {
 	width: 100%;
 	margin: 0;
